# ebi

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: delete-old-artifacts.yml  rust.yml
alp-binding/: Cargo.toml  build.rs
alp-binding/include/: compressor_specialized.hpp
alp-binding/src/: encoder.rs  lib.rs  main.rs
cuda-binding/: Cargo.toml
cuda-binding/src/: lib.rs  main.rs
ebi/: Cargo.toml
ebi/benches/: bench.rs
ebi/src/: compression_common.rs  compressor.rs  decoder.rs  encoder.rs  format.rs  io.rs  lib.rs  main.rs  time.rs
ebi/src/api/: decoder.rs  encoder.rs
ebi/src/compression_common/: buff.rs  elf.rs
ebi/src/compressor/: buff.rs  chimp.rs  chimp_n.rs  elf.rs  ffi_alp.rs  general_xor.rs  gorilla.rs  gzip.rs  run_length.rs  size_estimater.rs  snappy.rs  sprintz.rs  uncompressed.rs  zstd.rs
ebi/src/decoder/: chunk_reader.rs  error.rs  expr.rs  query.rs  timer.rs
ebi/src/decoder/chunk_reader/: buff.rs  chimp.rs  chimp_n.rs  elf.rs  ffi_alp.rs  general_xor.rs  gorilla.rs  gzip.rs  run_length.rs  snappy.rs  sprintz.rs  uncompressed.rs  zstd.rs
ebi/src/decoder/chunk_reader/buff/: controlled_precision.rs  decode.rs  filter.rs  filter_cmp.rs  filter_eq.rs  min_max.rs  sum.rs
ebi/src/encoder/: error.rs
ebi/src/format/: deserialize.rs  native.rs  run_length.rs  serialize.rs  uncompressed.rs
ebi/src/io/: aligned_buf_reader.rs  aligned_cursor.rs  as_bytes_mut.rs  bit_read.rs  bit_write.rs  buffered_bit_writer.rs
ebi/tests/: aggregation.rs  ml_query.rs  query.rs  round_trip.rs
ebi/tests/common/: mod.rs
experimenter/: .gitignore  Cargo.toml  buff_config.json  buff_config1.json  filter_config.json  filter_config_taxi.json  sprintz_config.json
experimenter/src/: lib.rs  main.rs  matmul_cuda.rs  tpch.rs
experimenter/ucr2018_configs/: prec10.json  prec100.json  prec1000.json  precAutoDetect.json
experimenter/xor/: .gitignore
src/: compressor.rs  decoder.rs  encoder.rs  format.rs  lib.rs  main.rs
src/compressor/: gorilla.rs  run_length.rs  uncompressed.rs
src/decoder/: chunk_reader.rs  error.rs
src/decoder/chunk_reader/: gorilla.rs  run_length.rs
src/format/: deserialize.rs  native.rs  run_length.rs  serialize.rs  uncompressed.rs
src/io/: aligned_buf_reader.rs
tools/: .gitignore  Cargo.toml  README.md  all2.py  common.py  common_mappings.json  create_embed_datasets.py  create_xor_datasets.py  dataset_to_vector_length.json  embedding_plot.py  gen-tpch.py  matrix_plot.py  matrix_plot2.py  plot.py  plot2.py  plot_all.sh  plot_cd.py  plot_timeline.py  plot_tpch.py  plot_xor.py  print_table.py  pyproject.toml  requirements.txt  run-all.py  ucr2018_plot.py
tools/src/: collect-stats.rs  csv2bin.rs  result_reader.rs
