[package]
name = "alp-binding"
version = "0.1.0"
edition = "2021"

[dependencies]
autocxx = "0.27.0"
cxx = "1.0"
rand = { version = "0.9.1", optional = true }
core_affinity = { version = "0.8.3", optional = true }

[build-dependencies]
autocxx-build = "0.27.0"
which = "6.0.3"
miette = { version = "5", features = ["fancy"] }

[features]
default = []
speed-test = ["rand", "core_affinity"]
