[package]
name = "ebi"
version = "0.1.0"
edition = "2021"

[dependencies]
derive-getters = "0.4.0"
rand = "0.8.5"
thiserror = "1.0.62"
cfg-if = "1.0"
derive_builder = "0.20.0"
quick-impl = "0.1.0"
roaring = "0.10.6"
anyhow = "1.0.86"
rand_distr = "0.4.3"
iter-enum = "1"
num_enum = "0.7.3"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"
rand_chacha = "0.3"

[features]
serde = ["dep:serde"]

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "ebi"
path = "src/main.rs"
bench = false

[lib]
bench = false
