[package]
name = "ebi"
version = "0.1.12"
edition = "2021"

[dependencies]
roaring = { git = "https://github.com/lemolatoon/roaring-rs", rev = "03a61ad" }
derive-getters = "0.4.0"
rand = "0.8.5"
thiserror = "1.0.62"
cfg-if = "1.0"
derive_builder = "0.20.0"
quick-impl = "0.1.0"
anyhow = "1.0.86"
rand_distr = "0.4.3"
iter-enum = "1"
num_enum = "0.7.3"
serde = { version = "1", features = ["derive"], optional = true }
zstd = "0.13.2"
flate2 = "1.0"
snap = "1"
alp-binding = { path = "../alp-binding", optional = true }

[dev-dependencies]
criterion = "0.5"
rand_chacha = "0.3"

[features]
ffi_alp = ["dep:alp-binding"]
ffi = ["ffi_alp"]
serde = ["dep:serde"]
default = ["ffi"]

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "ebi"
path = "src/main.rs"
bench = false

[lib]
bench = false
