[package]
name = "experimenter"
version = "0.1.10"
edition = "2021"

[dependencies]
ebi = { version = "0.1.10", path = "../ebi", features = ["serde"] }
clap = { version = "4.5.15", features = ["derive"] }
anyhow = "1.0.86"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.124"
chrono = { version = "0.4.38", features = ["serde"] }
quick-impl = "0.1.0"
glob = "0.3.1"
tqdm = "0.7.0"
either = "1.13.0"
