[package]
name = "experimenter"
version = "0.1.14"
edition = "2021"

[dependencies]
ebi = { version = "0.1.14", path = "../ebi", features = ["serde"] }
clap = { version = "4.5.15", features = ["derive"] }
anyhow = "1.0.86"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.124"
chrono = { version = "0.4.38", features = ["serde"] }
quick-impl = "0.1.0"
glob = "0.3.1"
tqdm = "0.7.0"
either = "1.13.0"
rand_chacha = { version = "0.3.1", features = ["std", "simd"] }
rand = "0.8.5"
cfg-if = "1.0.0"
parquet = "55.1.0"
arrow = "55.1.0"
tempfile = "3.20.0"

[features]
cuda = ["ebi/cuda"]
