[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
experimenter = { version = "0.1.0", path = "../experimenter" }
anyhow = "1.0.86"
glob = "0.3.1"
plotters = "0.3.6"
serde_json = "1.0.124"
plotpy = "1.3.0"

[[bin]]
name = "csv2bin"
path = "src/csv2bin.rs"

[[bin]]
name = "result_reader"
path = "src/result_reader.rs"
