[package]
name = "tools"
version = "0.1.14"
edition = "2021"

[dependencies]
experimenter = { version = "0.1.14", path = "../experimenter" }
anyhow = "1.0.86"
glob = "0.3.1"
serde_json = "1.0.124"
serde = { version = "1.0.218", features = ["serde_derive"] }

[[bin]]
name = "csv2bin"
path = "src/csv2bin.rs"

[[bin]]
name = "collect-stats"
path = "src/collect-stats.rs"
