[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.2.2",
    "matplotlib>=3.9.4",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.13.2",
]
