[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.6.0",
    "duckdb>=1.2.2",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "scikit-posthocs>=0.11.4",
    "seaborn>=0.13.2",
    "setuptools>=80.7.1",
    "tqdm>=4.67.1",
    "typing-extensions>=4.13.2",
    "yellowbrick>=1.5",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
